--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribokem</title>
-    <link rel="stylesheet" href="estilos.css/tribokem.css">
+    <link rel="stylesheet" href="estilos/tribokem.css">
 </head>
 <body>
     <h1> Titulo</h1>
@@ -14,7 +14,10 @@
         <li class="menu"><a href="productos.html">Productos</a></li>
         <li class="menu"><a href="servicios.html">Servicios</a></li>
         <li class="menu"><a href="blog.html">Blog</a></li>
-        
+        <div class="busqueda">
+            <input  class="cuadro-busqueda" type="search" placeholder="Search" aria-label="Search">       
+            <button class="boton-busqueda" type="submit">Buscar</button>
+        </div>
 
     </ul>
 </body>
