--- a/blog.html
+++ b/blog.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribokem</title>
     <link rel="stylesheet" href="estilos/tribokem.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
-    <h1> Titulo</h1>
+    <h1 class="t"> Blog</h1>
     <ul class="menu">
         <li class="menu"><a href="index.html">Inicio</a></li>
         <li class="menu"><a href="productos.html">Productos</a></li>
