--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
         <li class="menu"><a href="productos.html">Productos</a></li>
         <li class="menu"><a href="servicios.html">Servicios</a></li>
         <li class="menu"><a href="blog.html">Blog</a></li>
-        <div class="busqueda">
-            <input  class="cuadro-busqueda" type="search" placeholder="Search" aria-label="Search">       
-            <button class="boton-busqueda" type="submit">Buscar</button>
-        </div>
+       
     </ul>
 
     <br> 
@@ -47,7 +44,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="imagenes/Carrusel/carr3.jpg" class="d-block w-100" alt="...">
+                <img src="imagenes/Carrusel/carr1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Third slide label</h5>
                   <p>Some representative placeholder content for the third slide.</p>
@@ -64,6 +61,65 @@
             </button>
           </div>
     </section>
+    <section class="resumen">
+        <h2> lorem </h2>
 
+    </section>    
+
+    <section class="marcas">
+
+    </section>
+
+    <section class="servicios">
+
+    </section>
+
+    <section class="productos-destacados">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="imagenes/Carrusel/carr1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <a href="#" class="btn"style="background-color: #223740; color: #f2f2f2;">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="imagenes/Carrusel/carr1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a short card.</p>
+                  <a href="#" class="btn"style="background-color: #223740; color: #f2f2f2;">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="imagenes/Carrusel/carr1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn" style="background-color: #223740; color: #f2f2f2;">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="imagenes/Carrusel/carr1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <a href="#" class="btn"style="background-color: #223740; color: #f2f2f2;">Ver más</a>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
