--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
     </section>
     <section class="resumen">
-        <h2> lorem </h2>
+        <h2 class="subtitle"> lorem </h2>
 
     </section>    
 
@@ -118,7 +118,10 @@
             </div>
           </div>
     </section>
-    <footer>
+    
+<br><hr><br>
+    <footer class="final">
+
 
     </footer>
 </body>
