--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
           </div>
     </section>
     <section class="resumen">
-        <h2 class="subtitle"> lorem </h2>
+        <h2 class="subtitle"> Descripcion </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et quae reprehenderit veniam numquam debitis iusto, optio animi, architecto libero porro deleniti ullam doloremque eligendi temporibus eveniet illum exercitationem. Hic, ullam!</p>
 
     </section>    
 
     <section class="marcas">
+        <h2 class="subtitle">Marcas representadas</h2>
 
     </section>
 
@@ -75,6 +77,7 @@
     </section>
 
     <section class="productos-destacados">
+        <h2 class="subtitle">Productos destacados</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
@@ -118,7 +121,7 @@
             </div>
           </div>
     </section>
-    
+
 <br><hr><br>
     <footer class="final">
 
