--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,16 @@
         <li class="menu"><a href="productos.html">Productos</a></li>
         <li class="menu"><a href="servicios.html">Servicios</a></li>
         <li class="menu"><a href="blog.html">Blog</a></li>
-    
     </ul>
+
+
+<br>
+<br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br>
+    <br><hr><br>
+    <footer class="final">
+      <p>Pie de pagina</p>
+
+    </footer>
 </body>
 </html>
