--- a/productos.html
+++ b/productos.html
@@ -17,8 +17,12 @@
         <li class="menu"><a href="productos.html">Productos</a></li>
         <li class="menu"><a href="servicios.html">Servicios</a></li>
         <li class="menu"><a href="blog.html">Blog</a></li>
-        
-
     </ul>
+
+    <br><hr><br>
+    <footer class="final">
+      <p>Pie de pagina</p>
+
+    </footer>
 </body>
 </html>
