--- a/servicios.html
+++ b/servicios.html
@@ -20,6 +20,10 @@
             <li class="menu"><a href="blog.html">Blog</a></li>
         </ul> 
         
+        <br><hr><br>
+        <footer class="final">
+          <p>Pie de pagina</p>
     
+        </footer>
 </body>
 </html>
