--- a/index.html
+++ b/index.html
@@ -61,29 +61,27 @@
             </button>
           </div>
     </section>
+    <br><hr>
     <section class="resumen">
         <h2 class="subtitle"> Descripcion </h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et quae reprehenderit veniam numquam debitis iusto, optio animi, architecto libero porro deleniti ullam doloremque eligendi temporibus eveniet illum exercitationem. Hic, ullam!</p>
 
     </section>    
+    <br><hr>
 
     <section class="marcas">
         <h2 class="subtitle">Marcas representadas</h2>
-
     </section>
+    <br><hr>
 
     <section class="servicios">
-
-    </section>
-
-    <section class="productos-destacados">
-        <h2 class="subtitle">Productos destacados</h2>
+        <h2 class="subtitle">Servicios</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
-                <img src="imagenes/Carrusel/carr1.jpg" class="card-img-top" alt="...">
+                <img src="imagenes/Carrusel/carr2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Calibraciones</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <a href="#" class="btn"style="background-color: #223740; color: #f2f2f2;">Ver más</a>
                 </div>
@@ -91,9 +89,9 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="imagenes/Carrusel/carr1.jpg" class="card-img-top" alt="...">
+                <img src="imagenes/Carrusel/carr2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Mantenimiento</h5>
                   <p class="card-text">This is a short card.</p>
                   <a href="#" class="btn"style="background-color: #223740; color: #f2f2f2;">Ver más</a>
                 </div>
@@ -101,9 +99,9 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="imagenes/Carrusel/carr1.jpg" class="card-img-top" alt="...">
+                <img src="imagenes/Carrusel/carr2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Capacitacion</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                   <a href="#" class="btn" style="background-color: #223740; color: #f2f2f2;">Ver más</a>
                 </div>
@@ -111,9 +109,55 @@
             </div>
             <div class="col">
               <div class="card h-100">
+                <img src="imagenes/Carrusel/carr2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">ventas</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <a href="#" class="btn"style="background-color: #223740; color: #f2f2f2;">Ver más</a>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+    <br><br><hr>
+    <section class="productos-destacados">
+        <h2 class="subtitle">Productos destacados</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
                 <img src="imagenes/Carrusel/carr1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Producto 1</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <a href="#" class="btn"style="background-color: #223740; color: #f2f2f2;">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="imagenes/Carrusel/carr1.jpg" class="card-img-top" alt="imagen 1">
+                <div class="card-body">
+                  <h5 class="card-title">Producto 2</h5>
+                  <p class="card-text">This is a short card.</p>
+                  <a href="#" class="btn"style="background-color: #223740; color: #f2f2f2;">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="imagenes/Carrusel/carr1.jpg" class="card-img-top" alt="imagen 2">
+                <div class="card-body">
+                  <h5 class="card-title">Producto 3</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn" style="background-color: #223740; color: #f2f2f2;">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="imagenes/Carrusel/carr1.jpg" class="card-img-top" alt="imagen 3">
+                <div class="card-body">
+                  <h5 class="card-title">Producto 4</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <a href="#" class="btn"style="background-color: #223740; color: #f2f2f2;">Ver más</a>
                 </div>
