--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 </head>
 <body>
-    <h1 class="t"> Titulo</h1>
+    <h1 class="t"> .</h1>
     <ul class="menu">
         <li class="menu"><a href="index.html">Inicio</a></li>
+        <li class="menu"><a href="nosotros.html">Nosotros</a></li>
         <li class="menu"><a href="productos.html">Productos</a></li>
         <li class="menu"><a href="servicios.html">Servicios</a></li>
         <li class="menu"><a href="blog.html">Blog</a></li>
-       
     </ul>
 
     <br> 
@@ -64,6 +64,7 @@
     <br><hr>
     <section class="resumen">
         <h2 class="subtitle"> Descripcion </h2>
+        <br>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et quae reprehenderit veniam numquam debitis iusto, optio animi, architecto libero porro deleniti ullam doloremque eligendi temporibus eveniet illum exercitationem. Hic, ullam!</p>
 
     </section>    
@@ -71,11 +72,13 @@
 
     <section class="marcas">
         <h2 class="subtitle">Marcas representadas</h2>
-    </section>
+      <br>
+      </section>
     <br><hr>
 
     <section class="servicios">
         <h2 class="subtitle">Servicios</h2>
+        <br>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
@@ -122,6 +125,7 @@
     <br><br><hr>
     <section class="productos-destacados">
         <h2 class="subtitle">Productos destacados</h2>
+       <br>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
@@ -165,6 +169,16 @@
             </div>
           </div>
     </section>
+    <br><hr>
+    <h2 class="subtitle">Principales Clientes</h2>
+    <br>
+       <section class="principales-clientes">
+                <div class="cliente">a</div>
+                <div class="cliente">b</div>
+                <div class="cliente">c</div>
+                <div class="cliente">d</div>
+
+       </section>
 
 <br><hr><br>
     <footer class="final">
