--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,7 @@
     <h1 class="t"> Blog</h1>
     <ul class="menu">
         <li class="menu"><a href="index.html">Inicio</a></li>
+        <li class="menu"><a href="nosotros.html">Nosotros</a></li>
         <li class="menu"><a href="productos.html">Productos</a></li>
         <li class="menu"><a href="servicios.html">Servicios</a></li>
         <li class="menu"><a href="blog.html">Blog</a></li>
