--- a/servicios.html
+++ b/servicios.html
@@ -15,6 +15,7 @@
     <h1 class="t"> Servicios</h1>
         <ul class="menu">
             <li class="menu"><a href="index.html">Inicio</a></li>
+            <li class="menu"><a href="nosotros.html">Nosotros</a></li>
             <li class="menu"><a href="productos.html">Productos</a></li>
             <li class="menu"><a href="servicios.html">Servicios</a></li>
             <li class="menu"><a href="blog.html">Blog</a></li>
